# MySkiaDemo

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/keystore/: debug.keystore
app/src/androidTest/java/com/example/myskiademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  eskia.cpp  eskia.h  native-lib.cpp
app/src/main/cpp/common/: MyLooper.cpp  MyLooper.h  looper.cpp  native_log.h
app/src/main/cpp/gles/: EglCore.cpp  EglCore.h  EglSurfaceBase.cpp  EglSurfaceBase.h  GLRender.cpp  GLRender.h  OffscreenSurface.cpp  OffscreenSurface.h  WindowSurface.cpp  WindowSurface.h
app/src/main/cpp/gles/shape/: Cube.cpp  Cube.h  Triangle.cpp  Triangle.h
app/src/main/cpp/skia/: Canvas.cpp  Canvas.h
app/src/main/java/com/example/myskiademo/: MainActivity.java  MainActivity1.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/myskiademo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
